--- a/src/assets/styles/_App.scss
+++ b/src/assets/styles/_App.scss
@@ -1,6 +1,8 @@
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  background-color:  #333;  
+  min-height: 100vh;
 }
