--- a/src/components/AddNotesForm/styles/index.scss
+++ b/src/components/AddNotesForm/styles/index.scss
@@ -1,12 +1,14 @@
 .noteAdd {
-  width: 200px;
+  width: 500px;
   height: 30px;  
-  border: 1px solid;  
+  border-radius: 5px;
+  border: none;  
 }
 .btnSave {
-  margin-left: 7px;
-  height: 35px;
-  border: 1px solid ;
-  border-radius: 10px;
-  background-color: rgb(145, 248, 176);  
+  margin-left: 10px;  
+  padding: 9px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  background-color: rgb(6, 143, 47);  
 }
